SR-8 - Fix Navigation Rail overflow - Add scrollbar styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply bg-black text-white;
+@layer base {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #250059 #fffbff;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+    height: 20px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #fffbff;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #250059;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #250059;
+  }
 }
